[gd_scene load_steps=2 format=3 uid="uid://rp5vdyk62ni3"]

[ext_resource type="Script" uid="uid://b2fcitgajuuic" path="res://scripts/game_scene.gd" id="1_w5aja"]

[node name="GameScene" type="Node2D"]
texture_filter = 3
script = ExtResource("1_w5aja")

[node name="TileManager" type="Node2D" parent="."]

[node name="Camera" type="Camera2D" parent="."]

[node name="NextTile" type="Sprite2D" parent="Camera"]
position = Vector2(400, 0)

[node name="DeckLeft" type="Label" parent="Camera"]
offset_left = 350.0
offset_top = -80.0
offset_right = 450.0
offset_bottom = -40.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TileMoves" type="Node2D" parent="."]
